Changelog for Weeder

1.0.5, released 2018-05-05
    #39, provide weeder as a library
1.0.4, released 2018-05-02
    #38, make sure you parse bracketed version ranges properly
1.0.3, released 2018-03-04
    #35, support ^>= operator in Cabal
1.0.2, released 2018-03-01
    Add lower bounds for Yaml and Aeson
1.0.1, released 2018-02-23
    #34, support -any for version numbers
1.0, released 2018-01-22
    #30, bump the version number to 1.0
0.1.13, released 2018-01-17
    #32, find .hi files in more places
    #32, always disable color when running stack
0.1.12, released 2018-01-16
    Make available on Mac
0.1.11, released 2017-12-29
    #29, deal with case-insensitive FilePath on Windows
0.1.10, released 2017-12-28
    Make --verbose print out the directory when running commands
    Don't report semigroups as unused on any platforms
0.1.9, released 2017-12-07
    Don't report Win32/unix as unused on the alternate platform
0.1.8, released 2017-12-06
    Follow both branches for if/else containing dependencies/modules
0.1.7, released 2017-08-09
    #21, detect dependencies that are only required transitively
    #13, respect the STACK_YAML environment variable
    #20, add verbosity messages in a lot of places
    #15, tone down unused import if exporting a cross-package type
    #11, optimise execution speed (~3x faster)
0.1.6, released 2017-06-18
    #10, find files generated by alex/happy
0.1.5, released 2017-06-02
    If --yaml and no hints give no output
0.1.4, released 2017-05-27
    #9, allow --dist-dir to set the stack dist-dir
    Deal with operators including | in them
    Allow arrays of arrays of strings in the .weeder.yaml
0.1.3, released 2017-05-08
    #5, document how to install weeder
    #8, detect unused imports, even import Foo()
    #7, don't say modules with only instances are always redundant
    #6, don't give partial pattern matches when reading .weeder.yaml
0.1.2, released 2017-04-29
    #3, deal with space-separated hs-source-dirs